--- a/public/app/components/student/listStudentsView.html
+++ b/public/app/components/student/listStudentsView.html
@@ -41,9 +41,10 @@
         </div>
     </div>
 
+
     <div ng-controller="PaginationController">
-        <div>
-            <uib-pagination items-per-page="itemsPerPage" total-items="getTotalItems()" ng-model="currentPage" ng-change="pageChanged('student')" ng-show="showPagination()"></uib-pagination>
+        <div ng-show="show">
+            <uib-pagination items-per-page="itemsPerPage" total-items="getTotalItems()" ng-model="currentPage" ng-change="pageChanged('student')" ></uib-pagination>
         </div>
         <div ng-controller="PopUpCreateUpdateStudentController">
             <button type="button" class="btn btn-lg btn-primary" ng-click="updateOrCreateStudent()">
@@ -51,5 +52,6 @@
             </button>    
         </div>
     </div>
+
 
 </div>
