--- a/public/app/components/test/listTestsView.html
+++ b/public/app/components/test/listTestsView.html
@@ -1,6 +1,6 @@
 <div>
     <div class="page-header">
-        <h1>List of all tests</h1>
+        <h1>{{'TEST_LIST' | translate}}</h1>
     </div>
 
     <div class="row">
