--- a/public/app/components/test/testView.html
+++ b/public/app/components/test/testView.html
@@ -1,6 +1,6 @@
 <div>
     <div class="page-header">
-        <h1>{{titlePageTest}}</h1>
+        <h1>{{titlePageTest | translate}}  <span ng-hide='isNewTest()'>: {{testName}}</span> </h1>
     </div>
 
     <div class="row">
